рабочие запросы; base64

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
         </div>
       </form>
 
-      <button style="margin-top:20px"  class="btn waves-effect waves-light" (click)="uploadFileToActivity()">Отправить</button>
+      <button style="margin-top:20px"  class="btn waves-effect waves-light" (click)="uploadElements()">Отправить</button>
     </div>
     
 
